# Folio

./: .gitignore  CHANGELOG.md  Cargo.toml  README-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  python.yml  release.yml
crates/scribe-ast/: Cargo.toml
crates/scribe-ast/src/: lib.rs
crates/scribe-core/: Cargo.toml
crates/scribe-core/src/: error.rs  lib.rs
crates/scribe-core/tests/: smoke.rs
crates/scribe-docx/: Cargo.toml
crates/scribe-docx/src/: lib.rs
crates/scribe-highlight/: Cargo.toml
crates/scribe-highlight/src/: lib.rs
crates/scribe-images/: Cargo.toml
crates/scribe-images/src/: lib.rs
crates/scribe-math/: Cargo.toml
crates/scribe-math/src/: lib.rs  mathml_to_omml.rs
crates/scribe-parser/: Cargo.toml
crates/scribe-parser/src/: lib.rs
crates/scribe-preview/: Cargo.toml
crates/scribe-preview/src/: lib.rs
crates/scribe-py/: Cargo.toml  build.rs
crates/scribe-py/src/: lib.rs
crates/scribe-tauri/: Cargo.toml  tauri.conf.json
crates/scribe-tauri/frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
crates/scribe-tauri/frontend/src/: app.css  app.d.ts  app.html
crates/scribe-tauri/frontend/src/routes/: +layout.ts  +page.svelte
crates/scribe-tauri/icons/: icon.icns
crates/scribe-tauri/src/: commands.rs  lib.rs  main.rs
crates/scribe-template/: Cargo.toml
crates/scribe-template/src/: lib.rs
crates/scribe-template/themes/: academic.styles.xml  report.styles.xml  thesis-cn.styles.xml
demo/: demo-cn.md  demo-en.md
demo/outputs/: cli-cn-thesis.docx  cli-en-acm.docx  cli-en-default.docx  cli-en-ieee.docx  cli-en-springer-lncs.docx  demo-en-default.docx  python-academic.docx  python-default.docx  python-file-academic.docx  python-file-thesis-cn.docx  python-ref-acm.docx  python-ref-ieee.docx  python-ref-springer-lncs.docx  python-reference-doc.docx  python-report.docx  python-thesis-cn-custom.docx  python-thesis-cn.docx
demo/scripts/: cli-demo.sh  python-demo.ipynb  python-demo.py
demo/templates/: ieee.docx  springer-lncs.docx
docs/: demo-script.md
docs/superpowers/plans/: 2026-04-17-scribe-v1-plan.md
docs/superpowers/specs/: 2026-04-17-scribe-md-to-docx-design.md
fixtures/english/: m2-kitchen-sink.md  m3-math.md
python/folio/: __init__.py  __init__.pyi
python/tests/: test_smoke.py
scribe-cli/: Cargo.toml
scribe-cli/src/: main.rs
scripts/: py-dev.sh
test/: folio-comprehensive.md
test/output/: folio-comprehensive.docx
