[package]
name = "scribe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scribe-parser = { workspace = true }
scribe-docx = { workspace = true }
scribe-preview = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
zip = { workspace = true }
