[package]
name = "scribe-docx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scribe-ast = { workspace = true }
scribe-highlight = { workspace = true }
scribe-math = { workspace = true }
scribe-images = { workspace = true }
docx-rs = { workspace = true }
anyhow = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
zip = { workspace = true }
